--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/variables.css">
 </head>
 <body>
     <main>
@@ -25,7 +26,7 @@
             </div>
             <div>
                 <img src="./src/images/image-avatar.png" alt="NFT">
-                <p>Creation of <a href="#">jules Wyvern</a></p>
+                <p>Creation of <a href="#">jules Wyver</a></p>
             </div>
 
         </div>
