--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             
             <a href="#">
 
-                <h2>Equilibrium #3429</h2>
+                <h2 class="title">Equilibrium #3429</h2>
             </a>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <div>
