--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,27 +10,32 @@
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/variables.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <main>
         <div class="nft-card">
             <a href="#"><img src="./src/images/image-equilibrium.jpg" alt="equilibrium nft image"></a>
-            
-            <a href="#">
+
+            <a href="#" class="title-link">
 
                 <h2 class="title">Equilibrium #3429</h2>
             </a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <div>
-                <p>0.041 ETH</p>
-                <p>3 days left</p>
+            <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="info">
+                <p class="price">0.041 ETH</p>
+                <p class="days-left">3 days left</p>
             </div>
-            <div>
-                <img src="./src/images/image-avatar.png" alt="NFT">
-                <p>Creation of <a href="#">jules Wyver</a></p>
+            <div class="creator">
+                <img src="./src/images/image-avatar.png" alt="NFT" class="avatar">
+                <p class="text">Creation of <a href="#" class="name">jules Wyver</a></p>
             </div>
 
         </div>
     </main>
 </body>
+
 </html>
